fixed weird styling and gift wraps loading

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1385,9 +1385,15 @@ textarea {
 }
 .items-list.preview {
     transition: width 0.4s;
+    position: absolute;
+    left: 50%;
+    top: 54%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    grid-template-columns: repeat(auto-fill, 340px);
+    grid-template-columns: repeat(auto-fill, 200px);
+    grid-auto-columns: 240px;
+    grid-auto-rows: 270px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
